[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-6.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-5.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tools/Syringe/BlueVialCropped.png" type="Texture" id=4]
[ext_resource path="res://Assets/Tools/Syringe/YellowVialCropped.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tools/Syringe/PinkVialCropped.png" type="Texture" id=6]
[ext_resource path="res://Tools/Syringe/VialDraw.gd" type="Script" id=7]

[node name="VialDraw" type="Node2D"]
script = ExtResource( 7 )

[node name="YellowVial" type="Sprite" parent="."]
position = Vector2( -530, 0 )
texture = ExtResource( 5 )

[node name="PinkVial" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="BlueVial" type="Sprite" parent="."]
position = Vector2( 530, 0 )
texture = ExtResource( 4 )

[node name="Q" type="Sprite" parent="."]
position = Vector2( -530, 556.636 )
texture = ExtResource( 2 )

[node name="Space" type="Sprite" parent="."]
position = Vector2( 0, 560 )
texture = ExtResource( 3 )

[node name="E" type="Sprite" parent="."]
position = Vector2( 530, 560 )
texture = ExtResource( 1 )

[node name="PinkVialSyringePos" type="Position2D" parent="."]
position = Vector2( 0, -335 )

[node name="YellowVialSyringePos" type="Position2D" parent="."]
position = Vector2( -530, -335 )

[node name="BlueVialSyringPos" type="Position2D" parent="."]
position = Vector2( 530, -335 )
